--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,31 +2,38 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:alpine
-    restart: always
+    image: postgres:13-alpine
+    restart: unless-stopped
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
-      - POSTGRES_USER='${DB_USER}'
-      - POSTGRES_DB='${DB_USER}'
-      - POSTGRES_PASSWORD='${DB_PASSWORD}'
+      POSTGRES_USER: '${DB_USER}'
+      POSTGRES_DB: '${DB_USER}'
+      POSTGRES_PASSWORD: '${DB_PASSWORD}'
     ports:
       - 127.0.0.1:5432:5432
 
   nextcloud:
-    image: nextcloud:fpm
-    restart: always
+    image: nextcloud
+    restart: unless-stopped
     links:
       - postgres
     volumes:
       - nextcloud:/var/www/html
     environment:
-      - POSTGRES_USER='${DB_USER}'
-      - POSTGRES_DB='${DB_USER}'
-      - POSTGRES_PASSWORD='${DB_PASSWORD}'
-      - POSTGRES_HOST=postgres
+      POSTGRES_USER: '${DB_USER}'
+      POSTGRES_DB: '${DB_USER}'
+      POSTGRES_PASSWORD: '${DB_PASSWORD}'
+      POSTGRES_HOST: postgres
+
+      NEXTCLOUD_TRUSTED_DOMAINS: '${DOMAIN}'
+      NEXTCLOUD_OVERWRITE_CLI_URL: https://'${DOMAIN}'
+      NEXTCLOUD_OVERWRITEPROTOCOL: https
+
+      NEXTCLOUD_ADMIN_USER: '${DB_USER}'
+      NEXTCLOUD_ADMIN_PASSWORD: '${DB_PASSWORD}'
     ports: 
-      - 127.0.0.1:8080:80
+      - 8080:80
 
 volumes:
   postgres:
