--- a/docker-compose_arm-v7.yml
+++ b/docker-compose_arm-v7.yml
@@ -1,33 +1,40 @@
 version: '3.8'
 
 services:
-  db:
-    image: jc21/mariadb-aria:latest
-    environment:
-      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-      MYSQL_DATABASE: '${DB_USER}'
-      MYSQL_USER: '${DB_USER}'
-      MYSQL_PASSWORD: '${DB_PASSWORD}'
+  postgres:
+    image: linusfr/postgres:13-arm-v7
+    restart: unless-stopped
     volumes:
-      - db:/var/lib/mysql
-  app:
-    image: nextcloud
-    restart: always
+      - postgres:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: '${DB_USER}'
+      POSTGRES_DB: '${DB_USER}'
+      POSTGRES_PASSWORD: '${DB_PASSWORD}'
     ports:
-      - 127.0.0.1:8080:80
+      - 127.0.0.1:5432:5432
+
+  nextcloud:
+    image: nextcloud
+    restart: unless-stopped
+    links:
+      - postgres
     volumes:
       - nextcloud:/var/www/html
     environment:
-      MYSQL_DATABASE: '${DB_USER}'
-      MYSQL_USER: '${DB_USER}'
-      MYSQL_PASSWORD: '${DB_PASSWORD}'
-      MYSQL_HOST: db
+      POSTGRES_USER: '${DB_USER}'
+      POSTGRES_DB: '${DB_USER}'
+      POSTGRES_PASSWORD: '${DB_PASSWORD}'
+      POSTGRES_HOST: postgres
+
+      NEXTCLOUD_TRUSTED_DOMAINS: '${DOMAIN}'
+      NEXTCLOUD_OVERWRITE_CLI_URL: https://'${DOMAIN}'
+      NEXTCLOUD_OVERWRITEPROTOCOL: https
+
       NEXTCLOUD_ADMIN_USER: '${DB_USER}'
       NEXTCLOUD_ADMIN_PASSWORD: '${DB_PASSWORD}'
-      NEXTCLOUD_TRUSTED_DOMAINS: '${NEXTCLOUD_TRUSTED_DOMAINS}'
-    links:
-      - db
- 
+    ports: 
+      - 8080:80
+
 volumes:
-  db:
+  postgres:
   nextcloud:
