--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DB_USER=linus
-DB_PASSWORD=xSEvhXBppxPmizaxYSFcQZFat
+DB_USER=some-user
+DB_PASSWORD=some-password
 NEXTCLOUD_TRUSTED_DOMAINS=some-domain.com
